[package]
name = "cromwell"
version = "0.1.2"
authors = ["Takashi IIGUNI <ad2314ce71926@gmail.com>"]
description = "Rust Rootless Container Runtime"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/guni192/cromwell"
edition = "2018"

[dependencies]
nix = "0.11.0"
clap = "2.32.0"
