[package]
name = "cromwell"
version = "0.1.3-alpha.0"
authors = ["Takashi IIGUNI <ad2314ce71926@gmail.com>"]
description = "Rust Rootless Container Runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/guni192/cromwell"
edition = "2018"

[dependencies]
nix = "0.11.0"
clap = "2.32.0"
reqwest = "0.9.9"
serde_json = "1.0"
