[package]
name = "cromwell"
version = "0.1.5"
authors = ["Takashi IIGUNI <ad2314ce71926@gmail.com>"]
description = "Rust Rootless Container Runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/guni1192/cromwell"
edition = "2018"

[dependencies]
nix = "0.11.0"
clap = "2.32.0"
reqwest = "0.9.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tar = "0.4"
flate2 = "1.0"
dirs = "1.0"
log = "0.4"
env_logger = "0.6.0"
rand = "0.6"
prettytable-rs = "^0.8"
